Reestructura DrakesCraft: core v11, Paper 26.2 y VersionSafe multi-versión
- Sync completo con el fuente: código drakescraft_labs, torretas en items/turrets,
  structures NBT, MachineSessionManager, ItemStackBuilder y Como_Funciona.md
- pom.xml: groupId com.github.drakescraft_labs, slimefun-core v11 Drake, dough DRAKE,
  Paper [26.2.build,), JDK 25 (bytecode Java 21), shade plugin y fork compiler
- plugin.yml: api-version 26.2, main WeaponsAddon (eliminado LegacyWeaponsAddon)
- VersionSafe: resolución por reflexión de atributos/materiales para MC 1.20.4→1.21.11
  (GENERIC_ vs sin prefijo, CHAIN vs IRON_CHAIN, Registry via Class.forName)
- Bombardment Terminal: sin límite fijo, world border como único límite horizontal
- Workflows CI/release: Java 25, checks de metadatos y auditorías de seguridad
- README reescrito: badges GitHub/Modrinth/CurseForge, features y compatibilidad
- Eliminado RELEASE_NOTES_1.1.3.md